# skia-sentinel-firmware

./: .clang-format  .clang-tidy  .editorconfig  .env  .env.sample  .env.sh  .gitignore  AUTHORS  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  dev-build.sh  dev-flash.sh  dev-init.sh
.devcontainer/: .bashrc  Dockerfile  devcontainer.env.sh  devcontainer.json  devcontainer.json.sh  docker-compose.yml.sh  on-post-create.sh  on-post-start.sh
app/: CMakeLists.txt  Kconfig  debug.conf  prj.conf  west.yml
app/boards/: esp32s3_devkitc_procpu.overlay  wemos_c3_mini.overlay
app/boards/esp32s3_devkitc/support/: openocd.cfg
app/boards/riscv/wemos_c3_mini/: Kconfig.defconfig  wemos_c3_mini-pinctrl.dtsi  wemos_c3_mini.dts  wemos_c3_mini.yaml  wemos_c3_mini_connector.dtsi  wemos_c3_mini_defconfig
app/cmake/: ZephyrBuildConfig.cmake
app/scripts/: west-commands.yml
app/src/: main.c
boards/riscv/wemos_c3_mini/: Kconfig.board  Kconfig.defconfig  wemos_c3_mini-pinctrl.dtsi  wemos_c3_mini.dts
drivers/: CMakeLists.txt  Kconfig
drivers/gpio/: CMakeLists.txt  Kconfig
drivers/gpio/sc16is7xx/: CMakeLists.txt  Kconfig  sc16is7xx_bridge_gpio.c
drivers/mfd/: CMakeLists.txt
drivers/mfd/sc16is7xx/: CMakeLists.txt  Kconfig  mfd_sc16is7xx.c  mfd_sc16is7xx.h  mfd_sc16is7xx_if.h  mfd_sc16is7xx_if_i2c.c  mfd_sc16is7xx_if_spi.c
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/ens160/: CMakeLists.txt  (+5 more)
drivers/serial/: CMakeLists.txt
dts/bindings/: vendor-prefixes.txt
scripts/: dev-build.sh  dev-flash.sh  dev-init.sh  devcontainer-init.sh
zephyr/: module.yml
(+36 files in other folders)
